--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 
   <canvas id="snakeCanvas" width="400" height="400"></canvas>
 
-  <script src="snake.js"></script>
-
   <div>
-    Your Score: <div id = "score"> 0 </div>
+    Your Score: <div id = "score">0</div>
   </div>
+
+  <div id = "errors", style="color:red;"> </div>
+
+  <script src="snake.js"></script>
 
 </body>
 </html>
