added sound effects

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 
   <div id = "errors", style="color:red; text-align: center; font-size: 25px;"> </div>
 
+  <div id = "game-resources">
+    <audio data-name = "gameOverSound" src = "sounds/gameover.mp3"></audio>
+    <audio data-name = "AppleSound" src = "sounds/apple.mp3"></audio>
+    <audio data-name = "BlueAppleSound" src = "sounds/blueapple.mp3"></audio>
+  </div>
+
   <script src="constArrays.js"></script>
   <script src="snake.js"></script>
 
